added more dockfiles and new scripts

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,10 @@ router:
    - "8080:8080"
   volumes:
    - ~/.m2:/home/galeb/.m2
+  environment:
+   - CLUSTER_ID=dev
+  links:
+   - backend
 
 api:
   image: tuxmonteiro/galeb-api
@@ -11,8 +15,20 @@ api:
    - "9090:9090"
   volumes:
    - ~/.m2:/home/galeb/.m2
+  environment:
+   - CLUSTER_ID=dev
 
 healthchecker:
   image: tuxmonteiro/galeb-healthchecker
   volumes:
    - ~/.m2:/home/galeb/.m2
+  environment:
+   - CLUSTER_ID=dev
+
+backend:
+  image: tuxmonteiro/backend-test
+  ports:
+   - "8081:8081"
+   - "8082:8082"
+   - "8083:8083"
+   - "8084:8084"
