--- a/galeb-healthchecker/docker-compose.yml
+++ b/galeb-healthchecker/docker-compose.yml
@@ -2,3 +2,5 @@ healthchecker:
   image: tuxmonteiro/galeb-healthchecker
   volumes:
    - ~/.m2:/home/galeb/.m2
+  environment:
+   - CLUSTER_ID=dev
