--- a/galeb-healthchecker/Dockerfile
+++ b/galeb-healthchecker/Dockerfile
@@ -2,6 +2,8 @@ FROM tuxmonteiro/ubuntu-orajdk8
 
 MAINTAINER Marcelo Teixeira Monteiro
 
+ENV INTERVAL 1000
+
 ADD start.sh /usr/bin/
 ADD log4j.xml /tmp/
 ADD hazelcast.xml /tmp/
