--- a/routes.template
+++ b/routes.template
@@ -12,14 +12,16 @@
 #curl -v -XDELETE http://@API@:9090/rule/rule1
 
 #curl -v -XPOST http://@API@:9090/backendpool -d "{'id':'pool1'}"
+#curl -v -XPOST http://@API@:9090/backendpool -d "{'id':'pool1', 'properties':{'loadBalancePolicy': 'RoundRobinPolicy'}}"
 #curl -v -XPOST http://@API@:9090/backendpool -d "{'id':'pool1', 'properties':{'loadBalancePolicy': 'RandomPolicy'}}"
 #curl -v -XPOST http://@API@:9090/backendpool -d "{'id':'pool1', 'properties':{'loadBalancePolicy': 'IPHashPolicy'}}"
-curl -v -XPOST http://@API@:9090/backendpool -d "{'id':'pool1', 'properties':{'loadBalancePolicy': 'LeastConnPolicy'}}"
+#curl -v -XPOST http://@API@:9090/backendpool -d "{'id':'pool1', 'properties':{'loadBalancePolicy': 'LeastConnPolicy'}}"
+curl -v -XPOST http://@API@:9090/backendpool -d "{'id':'pool1', 'properties':{'loadBalancePolicy': '@POLICY@'}}"
 
-curl -v -XPOST http://@API@:9090/backend -d "{'id':'http://@BACKEND@:8081','parentId':'pool1'}"
-curl -v -XPOST http://@API@:9090/backend -d "{'id':'http://@BACKEND@:8082','parentId':'pool1'}"
-curl -v -XPOST http://@API@:9090/backend -d "{'id':'http://@BACKEND@:8083','parentId':'pool1'}"
-curl -v -XPOST http://@API@:9090/backend -d "{'id':'http://@BACKEND@:8084','parentId':'pool1'}"
+curl -v -XPOST http://@API@:9090/backend -d "{'id':'http://@BACKEND1@:8081','parentId':'pool1'}"
+curl -v -XPOST http://@API@:9090/backend -d "{'id':'http://@BACKEND2@:8082','parentId':'pool1'}"
+curl -v -XPOST http://@API@:9090/backend -d "{'id':'http://@BACKEND3@:8083','parentId':'pool1'}"
+curl -v -XPOST http://@API@:9090/backend -d "{'id':'http://@BACKEND4@:8084','parentId':'pool1'}"
 
 curl -v -XPOST http://@API@:9090/virtualhost -d "{'id':'lol.localdomain'}"
 
