--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ router:
    - ~/docker/.m2:/home/galeb/.m2
   environment:
    - CLUSTER_ID=dev
+   - VERSION=3.1.0-SNAPSHOT
 
 api:
   image: tuxmonteiro/galeb-api
@@ -15,6 +16,7 @@ api:
    - ~/docker/.m2:/home/galeb/.m2
   environment:
    - CLUSTER_ID=dev
+   - VERSION=3.1.0-SNAPSHOT
 
 healthchecker:
   image: tuxmonteiro/galeb-healthchecker
@@ -22,6 +24,7 @@ healthchecker:
    - ~/docker/.m2:/home/galeb/.m2
   environment:
    - CLUSTER_ID=dev
+   - VERSION=3.1.0-SNAPSHOT
 
 backend1:
   image: tuxmonteiro/backend-test
